# hello-world-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml
hello_world_cli/: __init__.py  cli.py
script/: bootstrap.py
tests/: __init__.py  cli_test.py
