[tool.poetry]
name = "hello-world-cli"
version = "1.0.0"
description = ""
authors = ["Armand Sauzay <35524799+armand-sauzay@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hello_world_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
